// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transclude component does not attempt to fetch if src changes but initialMarkup is defined 1`] = `
<div>
  <div>
    <p
      data-testid="test-page"
    >
      Initial content
    </p>
  </div>
</div>
`;

exports[`Transclude component renders loading state initially if no initialMarkup is provided 1`] = `
<div>
  Loading...
</div>
`;
